--- a/src/app/header/header/header.component.html
+++ b/src/app/header/header/header.component.html
@@ -1,16 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top py-0" >
-  <a routerLink="/" class="navbar-brand " (click)="closeDropdowns()">API-Collective</a>
-  <ul class="navbar-nav mr-auto nav-tabs">
-    <!-- <li class="nav-item" routerLinkActive="active show">
-      <a routerLink="/weather" class="nav-link">Weather</a>
-    </li>
-    <li class="nav-item" routerLinkActive="active show">
-      <a [routerLink]="['/shows']" [queryParams]="{page: currentPage}" class="nav-link">TVShows</a>
-    </li>
-    <li class="nav-item" routerLinkActive="active">
-      <a class="nav-link">Link 3</a>
-    </li> -->
-    <li class="nav-item dropdown">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top py-0 " >
+  <a routerLink="/" class="navbar-brand" (click)="closeDropdowns()">API-Collective</a>
+  <ul class="navbar-nav mr-auto nav-tabs " >
+    <li class="nav-item dropdown " >
       <a class="nav-link dropdown-toggle" (click)="onUtilityDropdown()" 
        data-toggle="utilityDropdown" role="button" aria-haspopup="true" aria-expanded="false">Utility</a>
       <div class="dropdown-menu" [ngClass]="{show: showUtilityMenu, active: showUtilityMenu}" 
@@ -18,8 +9,8 @@
       x-placement="bottom-start" style="position: absolute; transform: translate3d(0px, 40px, 0px); top: 0px; left: 0px; will-change: transform;">
         <a class="dropdown-item" (click)="onUtilityItem()"
          routerLink="/weather" routerLinkActive="active show">Weather</a>
-        <a class="dropdown-item" >Another action</a>
-        <a class="dropdown-item" >Something else here</a>
+        <!-- <a class="dropdown-item" >Another action</a>
+        <a class="dropdown-item" >Something else here</a> -->
       </div>
     </li>
     <li class="nav-item dropdown">
@@ -33,11 +24,15 @@
         [routerLink]="['/shows', selectedShowId]" [queryParams]="{page: currentPage}"
         routerLinkActive="active show">TV Shows</a>
         <a class="dropdown-item" 
-        [routerLink]="['/movies']"
+        [routerLink]="['/movies', 'news']"
         (click)="onEntertainmentItem()"
         routerLinkActive="active show"
         >Movies</a>
-        <a class="dropdown-item" >Something else here</a>
+        <a class="dropdown-item" 
+        [routerLink]="['/picflow']"
+        (click)="onEntertainmentItem()"
+        routerLinkActive="active show"
+        >Picflow</a>
       </div>
     </li>
   </ul>
