--- a/src/app/pages/nasa/nasa.component.html
+++ b/src/app/pages/nasa/nasa.component.html
@@ -3,12 +3,14 @@
   <div class="row">
     <div class="col title">
       <h3>Picture of the day</h3>
-      <h4>{{apod?.title}}</h4>
+      <h4 >{{apod?.title }}</h4>
     </div>
   </div>
   <div class="row">
     <div class="col">
-      <img [src]="apod?.url">
+      <loading-spinner *ngIf="showLoadingSpinner"></loading-spinner>
+      <img [src]="apod?.url" [hidden]="loading" (load)="onLoad()">
+      
     </div>
   </div>
 </div>
