--- a/src/app/pages/weather/weather.component.html
+++ b/src/app/pages/weather/weather.component.html
@@ -17,11 +17,20 @@
   </div>
 </div>
 
-<h3>Current Weather</h3>
+<div class="row">
+  <div class="col-sm-6">
+    <h3>Current Weather</h3>
+  </div>
+  <div class="col-sm-6">
+    <h3>5 Day Forecast(°C)</h3>
+  </div>
+
+</div>
 <loading-spinner *ngIf="showSpinner"></loading-spinner>
 <div class="container" *ngIf="currentWeatherData; else loading">
   <div class="row">
-    <div class="col-sm-6">
+
+    <div class="col-3">
       <div class="card text-white bg-success mb-3" style="max-width: 20rem;">
         <div class="card-header">{{ currentWeatherData?.name }}, {{ currentWeatherData?.sys.country}}</div>
         <div class="card-body">
@@ -32,13 +41,17 @@
         </div>
       </div>
     </div>
+
+
+    <div class="col-9">
+      <div *ngIf="chart">
+        <canvas id="canvas">{{ chart }}</canvas>
+      </div>
+    </div>
+
   </div>
 
-  <h3>5 Day Forecast ( °C )</h3>
 
-  <div *ngIf="chart">
-      <canvas id="canvas">{{ chart }}</canvas>
-    </div>
 
   <table class="table table-hover">
     <thead>
@@ -62,4 +75,3 @@
       </tr>
     </tbody>
   </table>
-
