--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 /* @import '~bootstrap/dist/css/bootstrap.min.css'; */
 @import '../node_modules/bootswatch/dist/darkly/bootstrap.min.css';
-@import url('https://fonts.googleapis.com/css?family=PT+Mono');
+@import url('https://fonts.googleapis.com/css?family=Voltaire');
 
+body {
+    overflow-y:scroll;
+}
+
+.navbar {
+    padding-left: 5%;
+    padding-right: 5%;
+}
