--- a/src/app/header/header/header.component.html
+++ b/src/app/header/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top py-0 " >
-  <a routerLink="/" class="navbar-brand" (click)="closeDropdowns()">API-Collective</a>
+  <a routerLink="/" class="navbar-brand" (click)="closeDropdowns()">AC</a>
   <ul class="navbar-nav mr-auto nav-tabs " >
     <li class="nav-item dropdown " >
       <a class="nav-link dropdown-toggle" (click)="onUtilityDropdown()" 
