--- a/src/app/pages/shows/shows.component.html
+++ b/src/app/pages/shows/shows.component.html
@@ -3,11 +3,11 @@
 <div class="row">
   <div class="col-sm-6">
     <loading-spinner *ngIf="showSpinner"></loading-spinner>
-    <ngb-pagination *ngIf="shows" [collectionSize]="collectionSize" [(page)]="currentPage" [boundaryLinks]="true" [rotate]="true"
-      [ellipses]="false" [maxSize]="6" [pageSize]="20" (pageChange)="loadPage($event)">
+    <ngb-pagination *ngIf="shows" [collectionSize]="collectionSize" [(page)]="currentPage" [boundaryLinks]="true"
+      [rotate]="true" [ellipses]="false" [maxSize]="6" [pageSize]="20" (pageChange)="loadPage($event)">
     </ngb-pagination>
     <div class="list-group">
-      <a *ngFor="let show of shows?.results" [routerLink]="['/shows', show?.id]" class="list-group-item list-group-item-action"
+      <a *ngFor="let show of shows" [routerLink]="['/shows', show?.id]" class="list-group-item list-group-item-action"
         (click)="onSelect($event)">{{
         show?.name }}</a>
     </div>
