--- a/src/app/header/header/header.component.html
+++ b/src/app/header/header/header.component.html
@@ -9,8 +9,6 @@
       x-placement="bottom-start" style="position: absolute; transform: translate3d(0px, 40px, 0px); top: 0px; left: 0px; will-change: transform;">
         <a class="dropdown-item" (click)="onUtilityItem()"
          routerLink="/weather" routerLinkActive="active show">Weather</a>
-        <!-- <a class="dropdown-item" >Another action</a>
-        <a class="dropdown-item" >Something else here</a> -->
       </div>
     </li>
     <li class="nav-item dropdown">
@@ -36,21 +34,18 @@
       </div>
     </li>
   </ul>
-  <ul *ngIf="!authService.isLoggedIn()" class="navbar-nav ml-auto">
+  <ul *ngIf="!authService.isLoggedIn" class="navbar-nav ml-auto">
     <li class="nav-item">
-      <a class="nav-link" (click)="onLogin()">Login</a>
+      <a class="nav-link" [routerLink]="['/login']">Login</a>
     </li>
   </ul>
-  <ul *ngIf="authService.isLoggedIn()" class="navbar-nav ml-auto">
-    <li>
+  <ul *ngIf="authService.isLoggedIn" class="navbar-nav ml-auto">
+    <li class="nav-item">
       <a class="nav-link" (click)="onLogout()">Logout</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link">{{ authService.getUserDetails()['displayName'] }}</a>
-    </li>
   </ul>
-  <form class="form-inline my-2 my-lg-0" [formGroup]="searchForm">
+<!--   <form class="form-inline my-2 my-lg-0" [formGroup]="searchForm">
     <input class="form-control mr-sm-2" id="search" name="search" type="text" placeholder="Search">
     <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-  </form>
+  </form> -->
 </nav>
